--- a/src/main/resources/at/wifi/notenmanager/views/statistics-view.fxml
+++ b/src/main/resources/at/wifi/notenmanager/views/statistics-view.fxml
@@ -1,21 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TitledPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<StackPane prefHeight="1348.0" prefWidth="1520.0" styleClass="root" stylesheets="@notenmanagerTheme.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.wifi.notenmanager.controller.StatisticsController">
+<StackPane prefHeight="1348.0" prefWidth="1520.0" styleClass="root" stylesheets="@notenmanagerTheme.css" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.wifi.notenmanager.controller.StatisticsController">
 
     <VBox alignment="CENTER" maxWidth="1483.0" prefHeight="1308.0" prefWidth="1483.0" spacing="24" styleClass="card">
 
@@ -41,7 +29,7 @@
         </HBox>
 
         <!-- Grid mit Datenbereichen -->
-        <GridPane hgap="20" vgap="20">
+        <GridPane hgap="20" prefHeight="1190.0" prefWidth="1475.0" vgap="20">
             <columnConstraints>
                 <ColumnConstraints percentWidth="36.0" />
                 <ColumnConstraints percentWidth="64.0" />
@@ -52,7 +40,7 @@
             </rowConstraints>
 
             <!-- Notenübersicht -->
-            <TitledPane expanded="true" prefHeight="740.0" prefWidth="534.0" styleClass="titled-pane" text="Notenübersicht" GridPane.columnIndex="0" GridPane.rowIndex="0">
+            <TitledPane expanded="true" prefHeight="567.0" prefWidth="513.0" styleClass="titled-pane" text="Notenübersicht" GridPane.columnIndex="0" GridPane.rowIndex="0">
                 <content>
                     <TableView fx:id="gradesTable" prefHeight="422.0" prefWidth="478.0" styleClass="table-view">
                         <columns>
